# presidents-discourse-dataset

./: .gitignore  Cargo.toml  README.md  copy_separated_to_html.py  download.py  map_url_to_slug.py  parse.py  presidents.json  store.py  tsne_embedding_plot.ipynb  utils.py
evaluation/: .~lock.cleaned_liwc_dictionaries.csv#  README.md  clean_dictionary.py  cleaned_liwc_dictionaries.csv  dataset.py  evaluate.py  lists.py  liwc_dictionary.csv  liwc_dictionary.xlsx  raw_all_liwc_dictionaries.csv
moral_foundations_dictionaries/: README.md  analyze_dictionary_demographics.ipynb  dataset.py  dictionary_ideas.txt  dynamic_dictionary_creation_continuous_training.ipynb  dynamic_dictionary_creation_ensemble.ipynb  format_add_metadata_to_tokenized_speeches.py  format_convert_json_dicts_to_csv.py  format_tokenize_congressional_data.py  make_dicts.ipynb  plot_analysis.ipynb  plot_core_prop.ipynb  plot_dictionary_stability.ipynb  plot_tsne_and_pca_of_president_frequency_distributions.ipynb  test_diff_two_dicts.ipynb  test_reverse_generation.ipynb  test_stability.ipynb  token_map.py  verify_word_counts.ipynb
moral_foundations_dictionaries/data/core_no_wiki_continuous_v1/csv_analysis/: Authority.xlsx  Fairness.xlsx  Harm.xlsx  Ingroup.xlsx  Institutional_Purity.xlsx  Sexual_Purity.xlsx
moral_foundations_dictionaries/data/core_no_wiki_continuous_v1/csv_dicts/: Authority.csv  Fairness.csv  Harm.csv  Ingroup.csv  Institutional_Purity.csv  (+1 more)
presidential_data_scrape/: README.md  copy_separated_to_html.py  map_url_to_slug.py  store.py
scrape/: download.py  parse.py
src/: main.rs
(+16 files in other folders)
