[package]
name = "presidents_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
clap = "2.34.0"
rand = "0.8.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.reqwest]
version = "^0.11"
features = ["json"]
